# Patchy-Operational

./: .claudeignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  architecture-and-patterns.md  audit_snapshot.md  domain-knowledge.md  pyrightconfig.json  reference-tables.md
telegram-qbt/: .gitignore  CLAUDE.md  README.md  cleanup_stale_pending.py  patchy_bot.db  pyproject.toml  qbt_telegram_bot.py  requirements-dev.txt  telegram-qbt-bot.service  test_schedule_probe.py  verify_schedule_probe.py
telegram-qbt/.claude/: settings.json
telegram-qbt/.claude/agents/: database-agent.md  plex-agent.md  schedule-agent.md  search-download-agent.md  security-agent.md  slash-command-engineer.md
telegram-qbt/.taskmaster/: config.json  state.json
telegram-qbt/.taskmaster/docs/: prd.md
telegram-qbt/.taskmaster/tasks/: task_001.md  task_002.md  task_003.md  task_004.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  task_011.md  task_012.md  task_013.md  task_014.md  task_015.md  tasks.json
telegram-qbt/docs/: clamav-operations.md
telegram-qbt/patchy_bot/: __init__.py  __main__.py  bot.py  config.py  dispatch.py  health.py  logging_config.py  malware.py  path_safety.py  plex_organizer.py  quality.py  rate_limiter.py  store.py  types.py  utils.py
telegram-qbt/patchy_bot/clients/: __init__.py  llm.py  plex.py  (+2 more)
telegram-qbt/tests/: conftest.py  helpers.py  test_auth_ratelimit.py  test_callbacks.py  test_candidate_cycling.py  test_completion_security_gate.py  test_delete_safety.py  test_dispatch.py  test_download_monitor.py  test_download_pipeline.py  test_full_series.py  test_handlers.py  test_health.py  test_health_store.py  test_llm_client.py  test_malware.py  test_movie_schedule.py  test_no_1080p.py  test_organizer.py  test_parsing.py  test_path_safety.py  test_plex_client.py  test_plex_organizer.py  test_poster_urls.py  test_progress.py  test_quality.py  test_runners.py  test_schedule.py  test_scoring.py  test_search_security.py  test_season_pack.py  test_theatrical_search.py
(+294 files in other folders)
