[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "patchy-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rank-torrent-name>=1.11.0,<2.0",  # pin <2.0: RTN uses Pydantic v1 internals
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E/F/W = pycodestyle + pyflakes, I = isort, UP = pyupgrade, S = bandit security
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long - handled by formatter
    "UP006",  # use `type` instead of `Type` - needs Python 3.9+ everywhere
    "UP007",  # use `X | Y` union syntax - needs Python 3.10+ for all use sites
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
